Stop hiding "Submit a Review" on mobile. (bug 764670)

--- a/media/css/mkt/detail.less
+++ b/media/css/mkt/detail.less
@@ -634,9 +634,6 @@ h1 .num {
             }
         }
     }
-    #add-first-review {
-        display: none;
-    }
     .support {
         .not-rated,
         .average-rating {
